--- a/ITunesShortcuts/Views/SettingsView.xaml
+++ b/ITunesShortcuts/Views/SettingsView.xaml
@@ -79,6 +79,17 @@
             <Rectangle Style="{StaticResource DividerStyle}" />
 
             <ContentControl
+                hlp:Attributes.Description="Show a track summary window after a track gets finished playing"
+                hlp:Attributes.Glyph="&#xf0e3;"
+                hlp:Attributes.Title="Show Track Summary"
+                Style="{StaticResource SettingsCard}">
+
+                <ToggleSwitch Margin="0,0,-82,0" IsOn="{x:Bind viewModel.Configuration.ShowTrackSummary, Mode=TwoWay}" />
+            </ContentControl>
+
+            <Rectangle Style="{StaticResource DividerStyle}" />
+
+            <ContentControl
                 hlp:Attributes.Description="Creates and shows a new lgoger window"
                 hlp:Attributes.Glyph="&#xe7bc;"
                 hlp:Attributes.Title="Logger"
